fixed longtext wrapping

--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -26,7 +26,7 @@
   text-align: left; /* Ensure each line is left-aligned */
 }
 
-.did {
+.longtext {
   font-size: 13px;
   word-break: break-word;
   overflow-wrap: break-word;
